--- a/vip.css
+++ b/vip.css
@@ -2,3 +2,17 @@
 {
     box-sizing: border-box !important;
 }
+
+.nav-link{
+    color: white !important;
+}
+.vip{
+    background-color: rgb(14,33,47);
+}
+
+.bg{
+    background-image: url('image/Bk81.jpg');
+    height: 100vh;
+    background-repeat: no-repeat;
+    background-size:100%;
+}
