--- a/vip.css
+++ b/vip.css
@@ -16,3 +16,39 @@
     background-repeat: no-repeat;
     background-size:100%;
 }
+
+.bg1{
+    background-image: url('image/upgrade-background.jpg');
+    height: 100vh;
+    background-repeat: no-repeat;
+    background-size:100%;
+}
+
+.bg2{
+    background-image: url('image/referral-background.jpg');
+    height: 100vh;
+    background-repeat: no-repeat;
+    background-size:100%;
+}
+
+.bg3{
+    background-image: url('image/join-background.jpg');
+    height: 100vh;
+    background-repeat: no-repeat;
+    background-size:100%;
+}
+
+
+ .table{
+    color: white;
+ }
+ h5{
+color:gold;
+ }
+
+ h6{
+    color:gold;
+     }
+p{
+    color: white;
+}
